﻿--------------------------
---- ChangeLog - gems ----
--------------------------
2015-03-09 Nello Blaser (version 1.0.0)
	* JSS paper added as vignette
	* Documentation updated
2014-05-15 Nello Blaser  (version 0.9.5)
	* Added tavi data
2014-03-11 Nello Blaser
	* Bugfix (NA in startingState)
2014-01-30 Nello Blaser (version 0.9.4)
	* Speed-up post-processing with data.table
	* Fixed documentation error
2013-07-08 Luisa Salazar-Vizcaya (version 0.9.3)
	* Increase speed (without uncertainty)
	* Optional number of sampler steps for hazard function discretization
	* Bugfix non-history dependent endtime
2013-06-17 Luisa Salazar-Vizcaya (version 0.9.2)
	* Bugfix history independent case
2013-06-16 Nello Blaser
	* Bugfix initial state
2013-02-14 Nello Blaser (version 0.9.1)
	* Added groups for confidence intervals
	* Slightly faster
2013-02-01 Luisa Salazar-Vizcaya
	* Uploaded version 0.9 to CRAN
2013-01-25 Nello Blaser (version 0.9)
	* Changed imports
	* Updated manual
2013-01-16 Nello Blaser (version 0.84)
	* Added cumulative incidence
2013-01-07 Luisa Salazar-Vizcaya
	* Changed names of formals and representations
	* Adjusted man to be consistent with new names
2013-01-07 Luisa Salazar-Vizcaya
	* Added GIT
2012-12-27 Nello Blaser (version 0.83)
	* Added prediction intervals
2012-12-19 Nello Blaser (version 0.82)
	* GIT version control implemented
2012-10-02 Nello Blaser (version 0.82)
	* Resolved baseline bug for cohortSize==1
	* Resolved bugs with few events
2012-09-17 Luisa Salazar-Vizcaya (version 0.81)
	* Input and output classes added
	* S4 methods for printing and summarizing results added
2012-08-16 Nello Blaser (version 0.80)
	* ChangeLog file added
	* Basic documentation added
